# Chatbot-Structure

./: Notebook_prac.ipynb  indexing.py  main.py  pyproject.toml  scraping.py
